<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@mipmap/logowix"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="81dp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:hint="@string/first_name_hint"
        android:imeOptions="actionNext"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/lastName"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age_hint"
        android:imeOptions="actionNext"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/age"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/email"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="20dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:text="@string/register_button"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="24dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/button">
        <TextView
            android:id="@+id/alreadyamember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/already_a_mebmer"
            tools:layout_editor_absoluteX="20dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/redirectLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="3dp"
            android:textColor="@color/twitterBlue"
            android:layout_toEndOf="@+id/alreadyamember"
            android:text="@string/already_a_mebmer_login"
            tools:layout_editor_absoluteX="20dp"
            android:textSize="15sp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>