<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:src="@drawable/hapirri_logo"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username_hint"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/loginImageView"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/username"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/button"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="24dp"
        android:onClick="loadUser"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginButton">
        <TextView
            android:id="@+id/alreadyamember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/alerady_have_an_account"
            tools:layout_editor_absoluteX="20dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/redirectRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="3dp"
            android:textColor="@color/twitterBlue"
            android:layout_toEndOf="@+id/alreadyamember"
            android:text="@string/sign_up"
            tools:layout_editor_absoluteX="20dp"
            android:textSize="15sp"/>

        <TextView
            android:layout_below="@+id/redirectRegister"
            android:id="@+id/loggedInAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="3dp"
            android:textColor="@color/twitterBlue"
            tools:layout_editor_absoluteX="20dp"
            android:textSize="20sp"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>