<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp">

    <ImageView
        android:id="@+id/loginImageView"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:src="@drawable/hapirri_logo"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="100dp" />

    <EditText
        android:id="@+id/email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        app:layout_constraintTop_toBottomOf="@+id/loginImageView"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="20dp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/log_in"
        android:background="@color/twitterBlue"
        android:layout_marginHorizontal="4dp"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:layout_editor_absoluteX="24dp"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="4dp"
        app:layout_constraintTop_toBottomOf="@+id/google_button"
        tools:layout_editor_absoluteX="24dp">

        <TextView
            android:id="@+id/alreadyamember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/alerady_have_an_account"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="20dp" />

        <TextView
            android:id="@+id/redirectRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="3dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/alreadyamember"
            android:text="@string/sign_up"
            android:textColor="@color/twitterBlue"
            android:textSize="15sp"
            tools:layout_editor_absoluteX="20dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/redirectForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/twitterBlue"
        app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />
</androidx.constraintlayout.widget.ConstraintLayout>